<resources>
    <string name="app_name">Movie Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="button_addMovie">Add Movie</string>
    <string name="hint_movieTitle">Movie Title</string>
    <string name="hint_movieDirector">Director</string>
    <string name="hint_movieGenre">Genre</string>
    <string name="hint_movieYear">Release Year</string>
    <string name="hint_movieRating">Rating (1-10)</string>
    <string name="hint_movieCinema">Cinema/Venue</string>
    <string name="hint_movieDescription">Description</string>
    <string name="menu_addMovie">Add</string>
    <string name="menu_cancelMovie">Cancel</string>

    <string-array name="genre_options">
        <item>Select Genre</item>
        <item>Action</item>
        <item>Comedy</item>
        <item>Drama</item>
        <item>Horror</item>
        <item>Romance</item>
        <item>Sci-Fi</item>
        <item>Thriller</item>
        <item>Documentary</item>
        <item>Animation</item>
        <item>Other</item>
    </string-array>
</resources>